Use a switch expression in getServerChangeException()
Improve clarity and defenses by using a switch expression, which ensures
we cover all cases.

Change-Id: Ibe39c25a780b1776985ffdb1d968c58fa922f51d
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>